--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid">
     <div class="d-flex justify-content-between align-items-center">
         <a href="#" class="d-block">
-            <img src="../img/images.png" alt="Logo" class="img-fluid">
+            <img src="../assets/img/images.png" alt="Logo" class="img-fluid">
         </a>
 
         <div class="d-flex align-items-center gap-4">
