Commit rutas corregidas

--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -31,31 +31,31 @@
                 <ul class="list-unstyled ps-0">
 
                     <li class="m-0 p-0">
-                        <a href="/home.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/home.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Inicio
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/puntos_intervencion.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/puntos_intervencion.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Puntos Intervención
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/calendario.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/calendario.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Calendario
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/libro_oficiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/libro_oficiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Libro de Oficiales
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/control_vehiculos.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/control_vehiculos.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Vehículos
                         </a>
                     </li>
@@ -71,14 +71,14 @@
                         <div class="collapse" id="alineacion-sidebar">
                             <ul class="list-unstyled border border-dark">
                                 <li>
-                                    <a href="/crear_alineacion.html"
+                                    <a href="/pages/crear_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Crear
                                     </a>
                                 </li>
                                 <hr>
                                 <li>
-                                    <a href="/mostrar_alineacion.html"
+                                    <a href="/pages/mostrar_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Mostrar
                                     </a>
@@ -98,13 +98,13 @@
                         <div class="collapse" id="cuadrante-sidebar">
                             <ul class="list-unstyled border border-dark">
                                 <li>
-                                    <a href="/cuadrante_anual.html"
+                                    <a href="/pages/cuadrante_anual.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Anual
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="/cuadrante_mensual.html"
+                                    <a href="/pages/cuadrante_mensual.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Mensual
                                     </a>
@@ -114,25 +114,25 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/control_materiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/control_materiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Materiales
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/mapas.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/mapas.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Mapas
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/tipo_emergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/Emergencia/tipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Tipo de Emergencia
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/logout" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/logout" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Cerrar Sesión
                         </a>
                     </li>
