Commit fix logo

--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,7 +1,7 @@
-<header class="container-fluid py-3 px-4">
-    <div class="d-flex justify-content-between align-items-center">
-        <a href="#" class="d-block">
-            <img src="/German/public/assets/img/images.png" alt="Logo" class="img-fluid">
+<header class="container-fluid py-3 px-1 ">
+    <div class="d-flex justify-content-between align-items-center ">
+        <a href="../pages/home.html" class="d-block ">
+            <img src="/assets/img/images.png" alt="Logo" class="img-fluid logo">
         </a>
 
         <div class="d-flex align-items-center gap-4">
@@ -14,3 +14,5 @@
         </div>
     </div>
 </header>
+
+
