--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,6 +1,6 @@
 <header class="container-fluid py-3 px-1 ">
     <div class="d-flex justify-content-between align-items-center ">
-        <a href="../pages/home.html" class="d-block ">
+        <a  class="d-block logo-container">
             <img src="/assets/img/images.png" alt="Logo" class="img-fluid logo">
         </a>
 
