--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -37,6 +37,12 @@
                     </li>
 
                     <li class="m-0 p-0">
+                        <a href="/pages/emergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                            Emergencias
+                        </a>
+                    </li>
+
+                    <li class="m-0 p-0">
                         <a href="/pages/puntos_intervencion.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Puntos Intervención
                         </a>
@@ -76,7 +82,6 @@
                                         Crear
                                     </a>
                                 </li>
-                                <hr>
                                 <li>
                                     <a href="/pages/mostrar_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
