--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -76,13 +76,13 @@
                         </button>
                         <div class="collapse" id="alineacion-sidebar">
                             <ul class="list-unstyled border border-dark">
-                                <li>
+                                <li class="border-top border-bottom border-dark">
                                     <a href="/pages/crear_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Crear
                                     </a>
                                 </li>
-                                <li>
+                                <li class="border-top border-bottom border-dark">
                                     <a href="/pages/mostrar_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Mostrar
@@ -102,13 +102,13 @@
                         </button>
                         <div class="collapse" id="cuadrante-sidebar">
                             <ul class="list-unstyled border border-dark">
-                                <li>
+                                <li class="border-top border-bottom border-dark">
                                     <a href="/pages/cuadrante_anual.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Anual
                                     </a>
                                 </li>
-                                <li>
+                                <li class="border-top border-bottom border-dark">
                                     <a href="/pages/cuadrante_mensual.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Mensual
