--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -37,13 +37,13 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/emergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="../pages/Emergencia/vistaEmergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Emergencias
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/puntos_intervencion.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Puntos Intervención
                         </a>
                     </li>
@@ -61,7 +61,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/control_vehiculos.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="../pages/Vehiculo/vistaVehiculo.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Vehículos
                         </a>
                     </li>
@@ -119,7 +119,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/control_materiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="../pages/Materiales/vistaMateriales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Materiales
                         </a>
                     </li>
@@ -131,7 +131,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/Emergencia/tipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="../pages/Emergencia/vistaTipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Tipo de Emergencia
                         </a>
                     </li>
