Comit de arreglos

--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -1,8 +1,8 @@
 <!-- CONTENEDOR DEL SIDEBAR -->
-<div class="row flex-shrink-0">
+<div>
 
     <!-- BOTÓN HAMBURGUESA (MÓVIL) -->
-    <div class="d-lg-none bg-light d-flex justify-content-end pe-3 py-2">
+    <div class="d-lg-none d-flex justify-content-end">
         <button class="btn btn-outline-dark" type="button"
                 data-bs-toggle="offcanvas"
                 data-bs-target="#sidebar">
@@ -26,7 +26,7 @@
         </div>
 
         <!-- CONTENIDO -->
-        <div class="offcanvas-body p-0 overflow-hidden">
+        <div class=" p-0 overflow-hidden">
             <aside>
                 <ul class="list-unstyled ps-0">
 
@@ -37,31 +37,31 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/emergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/Emergencia/vistaEmergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Emergencias
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/puntos_intervencion.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Puntos Intervención
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/calendario.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Calendario
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/libro_oficiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Libro de Oficiales
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/control_vehiculos.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/Vehiculo/vistaVehiculo.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Vehículos
                         </a>
                     </li>
@@ -119,19 +119,19 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/control_materiales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/public/pages/Materiales/vistaMateriales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Materiales
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/mapas.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Mapas
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/Emergencia/tipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/Emergencia/vistaTipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Tipo de Emergencia
                         </a>
                     </li>
