--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,6 +1,6 @@
 <header class="container-fluid ">
     <div class="d-flex justify-content-between align-items-center">
-        <a href="#" class="d-block">
+        <a href="/pages/home.html" class="d-block">
             <img src="/../../assets/img/Logo.jpg" alt="Logo" class="img-fluid">
         </a>
 
@@ -11,7 +11,7 @@
             
             <span class="header-text">TEXTO</span>
 
-            <a href="#" class="d-flex align-items-center gap-2 header-user text-decoration-none">
+            <a href="/pages/AreaPersonal/vistaAreaPersonal.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-person-circle fs-4 text-white"></i>
                 <span>USUARIO</span>
             </a>
