--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -31,13 +31,13 @@
                 <ul class="list-unstyled ps-0">
 
                     <li class="m-0 p-0">
-                        <a href="/pages/home.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/vistas/home.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Inicio
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/Emergencia/vistaEmergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/vistas/Emergencia/vistaEmergencias.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Emergencias
                         </a>
                     </li>
@@ -61,7 +61,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/Vehiculo/vistaVehiculo.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/vistas/Vehiculo/vistaVehiculo.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Vehículos
                         </a>
                     </li>
@@ -77,13 +77,13 @@
                         <div class="collapse" id="alineacion-sidebar">
                             <ul class="list-unstyled border border-dark">
                                 <li class="border-top border-bottom border-dark">
-                                    <a href="/pages/crear_alineacion.html"
+                                    <a href="/vistas/crear_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Crear
                                     </a>
                                 </li>
                                 <li class="border-top border-bottom border-dark">
-                                    <a href="/pages/mostrar_alineacion.html"
+                                    <a href="/vistas/mostrar_alineacion.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Mostrar
                                     </a>
@@ -103,13 +103,13 @@
                         <div class="collapse" id="cuadrante-sidebar">
                             <ul class="list-unstyled border border-dark">
                                 <li class="border-top border-bottom border-dark">
-                                    <a href="/pages/cuadrante_anual.html"
+                                    <a href="/vistas/cuadrante_anual.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Anual
                                     </a>
                                 </li>
                                 <li class="border-top border-bottom border-dark">
-                                    <a href="/pages/cuadrante_mensual.html"
+                                    <a href="/vistas/cuadrante_mensual.html"
                                        class="d-flex justify-content-center text-decoration-none text-dark">
                                         Mensual
                                     </a>
@@ -119,7 +119,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/public/pages/Materiales/vistaMateriales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/public/vistas/Materiales/vistaMateriales.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Control de Materiales
                         </a>
                     </li>
@@ -131,13 +131,13 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/Emergencia/vistaTipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/vistas/Emergencia/vistaTipoEmergencia.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Tipo de Emergencia
                         </a>
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/logout" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/vistas/logout" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Cerrar Sesión
                         </a>
                     </li>
