Revert "LOGIN(BASE) COMMIT"

--- a/public/includes/sidebar.html
+++ b/public/includes/sidebar.html
@@ -145,7 +145,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="/pages/logout/logout.html" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/pages/logout" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Cerrar Sesión
                         </a>
                     </li>
