--- a/frontend/includes/header.html
+++ b/frontend/includes/header.html
@@ -1,7 +1,7 @@
 <header class="container-fluid ">
     <div class="d-flex justify-content-between align-items-center">
-        <a href="/pages/home.html" class="d-block">
-            <img src="/../../assets/img/Logo.jpg" alt="Logo" class="img-fluid">
+        <a href="/frontend/pages/home.html" class="d-block">
+            <img src="/frontend/assets/img/Logo.jpg" alt="Logo" class="img-fluid">
         </a>
 
         <div class="d-flex align-items-center gap-4">
@@ -11,7 +11,7 @@
             
             <span class="header-text">TEXTO</span>
 
-            <a href="/pages/AreaPersonal/vistaAreaPersonal.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
+            <a href="/frontend/pages/AreaPersonal/vistaAreaPersonal.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-person-circle fs-4 text-white"></i>
                 <span>USUARIO</span>
             </a>
