--- a/frontend/includes/header.html
+++ b/frontend/includes/header.html
@@ -5,11 +5,11 @@
         </a>
 
         <div class="d-flex align-items-center gap-4">
-            <a href="#" class="d-flex align-items-center gap-2 header-user text-decoration-none">
+            <a href="/frontend/pages/Emergencia/vistaEmergenciasActivas.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-exclamation-triangle-fill fs-4 text-white"></i>
             </a>
             
-            <span class="header-text">TEXTO</span>
+            <span class="header-text">Teruel. SPEIS</span>
 
             <a href="/frontend/pages/AreaPersonal/vistaAreaPersonal.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-person-circle fs-4 text-white"></i>
