--- a/frontend/includes/sidebar.html
+++ b/frontend/includes/sidebar.html
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="m-0 p-0">
-                        <a href="" class="btn btn-toggle w-100 border border-dark rounded-0">
+                        <a href="/frontend/pages/Calendario/vistaCalendario.html" class="btn btn-toggle w-100 border border-dark rounded-0">
                             Calendario
                         </a>
                     </li>
