--- a/frontend/includes/sidebar.html
+++ b/frontend/includes/sidebar.html
@@ -178,7 +178,7 @@
                         Gestión
                     </h6>
                     <nav class="nav flex-column gap-1">
-                        <a href="#" class="nav-link link-dark d-flex align-items-center p-2 rounded">
+                        <a href="/frontend/pages/Persona/vistaPersona.html" class="nav-link link-dark d-flex align-items-center p-2 rounded">
                             <i class="bi bi-people text-primary me-2"></i>
                             <span>Usuarios</span>
                         </a>
