--- a/frontend/includes/sidebar.html
+++ b/frontend/includes/sidebar.html
@@ -156,6 +156,11 @@
                             <i class="bi bi-truck text-success me-2"></i>
                             <span>Vehículos</span>
                         </a>
+                        <a href="/frontend/pages/Salida/vistaSalida.html"
+                            class="nav-link link-dark d-flex align-items-center p-2 rounded">
+                            <i class="bi bi-door-open text-success me-2"></i>
+                            <span>Salidas</span>
+                        </a>
                         <a href="/frontend/pages/Material/vistaMaterial.html"
                             class="nav-link link-dark d-flex align-items-center p-2 rounded">
                             <i class="bi bi-box-seam text-success me-2"></i>
