--- a/frontend/includes/header.html
+++ b/frontend/includes/header.html
@@ -13,7 +13,7 @@
 
             <a href="/frontend/pages/AreaPersonal/vistaAreaPersonal.html" class="d-flex align-items-center gap-2 header-user text-decoration-none">
                 <i class="bi bi-person-circle fs-4 text-white"></i>
-                <span>USUARIO</span>
+                <span>Cargando...</span>
             </a>
         </div>
     </div>
