--- a/frontend/includes/sidebar.html
+++ b/frontend/includes/sidebar.html
@@ -223,11 +223,12 @@
                 <hr class="my-2">
 
                 <!-- CERRAR SESIÓN -->
-                <a href="/pages/logout"
-                    class="nav-link link-danger d-flex align-items-center p-2 rounded bg-danger bg-opacity-10 fw-semibold">
+                <a href="#" class="logout-link nav-link link-danger d-flex align-items-center p-2 rounded bg-danger bg-opacity-10 fw-semibold">
                     <i class="bi bi-box-arrow-right me-2"></i>
                     <span>Cerrar Sesión</span>
                 </a>
+
+
 
             </aside>
         </div>
